<resources>
    <string name="app_name">ThirtyGame</string>
    <string name="pick_dice">Pick your dice!</string>
    <string name="rounds_left">Available throws: %1$d</string>
    <string name="check_score">Check score!</string>
    <string name="chosen_type">Please choose a method to use.</string>
    <string name="check_combo">Add combo to sum</string>
    <string name="current_combo_sum">0 combinations of sum 5.</string>
    <string name="current_combo_score">Combo score: 0</string>
    <string name="save_combos">Save combos and continue!</string>
    <string name="main_menu_text">Welcome to Thirty!</string>
    <string name="new_game">Start new game</string>
    <string name="result_title">Results</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="final_sum">Final sum: %1$d</string>
    <string name="combo_score">Combo score: %1$d</string>
    <string name="wrong_value_toast">Dice with value over three not added to sum!</string>
    <string name="combo_count">%1$d combinations of %2$s.</string>
    <string name="incorrect_combo">Incorrect combo, try again!</string>
    <string name="select_low_combo">Select all dice with a max value of three.</string>
    <string name="result_item">%1$s - %2$d</string>
    <string name="no_rolls">No rolls left!</string>

    <string name="option_low">Low</string>
    <string name="option_four">Four</string>
    <string name="option_five">Five</string>
    <string name="option_six">Six</string>
    <string name="option_seven">Seven</string>
    <string name="option_eight">Eight</string>
    <string name="option_nine">Nine</string>
    <string name="option_ten">Ten</string>
    <string name="option_eleven">Eleven</string>
    <string name="option_twelve">Twelve</string>

</resources>