<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.bitninja.thirtygame.CheckScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_score"
            android:gravity="center"
            android:textSize="40dp"
            android:layout_weight="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/dice1"
            android:src="@drawable/white1"
            android:onClick="saveDice"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/dice2"
            android:src="@drawable/white2"
            android:onClick="saveDice"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/dice3"
            android:src="@drawable/white3"
            android:onClick="saveDice"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/dice4"
            android:src="@drawable/white4"
            android:onClick="saveDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/dice5"
            android:src="@drawable/white5"
            android:onClick="saveDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/dice6"
            android:src="@drawable/white6"
            android:onClick="saveDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/scoretype_spinner"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/chosen_type"
            android:text="@string/chosen_type"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <Button
                android:id="@+id/check_combo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/check_combo"
                android:onClick="checkCombo"/>
            <TextView
                android:id="@+id/current_combo_sum"
                android:text="@string/current_combo_sum"
                android:layout_weight="0"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/current_combo_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/current_combo_score"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save_combos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_combos"
            android:onClick="saveCombos"/>
    </LinearLayout>

</LinearLayout>
